completed W03 Individual Activity: Expand Inventory

--- a/src/product_listing/index.html
+++ b/src/product_listing/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -8,23 +8,19 @@
     <link rel="stylesheet" href="/css/style.css" />
 </head>
 
-<body>
-    <!-- Header placeholder -->
+<body class="product-listing-page">
     <header id="main-header" class="divider"></header>
 
     <main class="divider">
         <section class="products">
-            <h2 class="page-title">Top Products</h2>
-            <ul class="product-list">
-                <!-- Product items will be dynamically rendered here -->
-            </ul>
+            <h2 class="category-title">Top Products</h2>
+            <ul class="product-list"></ul>
         </section>
     </main>
 
-    <!-- Footer placeholder -->
     <footer id="main-footer" class="divider"></footer>
 
-    <!-- JS for dynamic product listing -->
+    <!-- Scripts -->
     <script type="module" src="../js/product-listing.js"></script>
 </body>
 
