--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -1,40 +1,30 @@
 <!doctype html>
-
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sleep Outside | Cart</title>
 
-    <title>Sleep Outside | Cart</title>
+  <!--  Fixed stylesheet path -->
+  <link rel="stylesheet" href="/src/css/style.css" />
+</head>
 
-    <link rel="stylesheet" href="/css/style.css" />
+<body class="cart-page">
+  <header id="main-header" class="divider"></header>
 
-    <script src="../js/cart.js" type="module"></script>
-  </head>
+  <main class="divider">
+    <section class="products">
+      <h2>My Cart</h2>
+      <ul class="product-list"></ul>
+    </section>
+  </main>
 
-  <body class="cart-page">
+  <footer id="main-footer" class="divider"></footer>
 
-    <header id="main-header" class="divider"></header>
+  <!--  Fixed script paths -->
+  <script type="module" src="/src/js/cart.js"></script>
+  <script type="module" src="/src/js/main.js"></script>
+</body>
 
-
- 
-
-    <main class="divider">
-      <section class="products">
-        <h2>My Cart</h2>
-
-        <ul class="product-list">
-          
-        </ul>
-      </section>
-    </main>
-
-    <footer id="main-footer"></footer>
-
-    <script type="module" src="../js/cart.js"></script>
-    <script type="module" src="../js/main.js"></script>
-
-    <!-- <footer>&copy;NOT a real business</footer> -->
-  </body>
 </html>
