--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sleep Outside | Checkout</title>
-  <link rel="stylesheet" href="css/style.css" />
+
+  <!-- Fixed stylesheet path -->
+  <link rel="stylesheet" href="/src/css/style.css" />
 </head>
 
 <body>
@@ -20,9 +22,9 @@
 
   <footer id="main-footer" class="divider"></footer>
 
-  <!-- Checkout JS to load header/footer and handle checkout -->
-  <script type="module" src="js/checkout.js"></script>
-  <script type="module" src="./js/main.js"></script>
+  <!-- Fixed script paths -->
+  <script type="module" src="/src/js/checkout.js"></script>
+  <script type="module" src="/src/js/main.js"></script>
 </body>
 
 </html>
