updated image file path

--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sleep Outside | Cart</title>
 
-  <!--  Fixed stylesheet path -->
-  <link rel="stylesheet" href="/src/css/style.css" />
+  <!--  Correct path -->
+  <link rel="stylesheet" href="/css/style.css" />
 </head>
 
 <body class="cart-page">
@@ -22,9 +22,9 @@
 
   <footer id="main-footer" class="divider"></footer>
 
-  <!--  Fixed script paths -->
-  <script type="module" src="/src/js/cart.js"></script>
-  <script type="module" src="/src/js/main.js"></script>
+  <!--  Correct script paths -->
+  <script type="module" src="/js/cart.js"></script>
+  <script type="module" src="/js/main.js"></script>
 </body>
 
 </html>
