--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sleep Outside | Checkout</title>
 
-  <!-- Fixed stylesheet path -->
-  <link rel="stylesheet" href="/src/css/style.css" />
+  <!--  Correct path -->
+  <link rel="stylesheet" href="/css/style.css" />
 </head>
 
 <body>
@@ -16,15 +16,14 @@
   <main class="divider">
     <section class="products">
       <h2>Review & Place your Order</h2>
-      <!-- Checkout items will go here -->
     </section>
   </main>
 
   <footer id="main-footer" class="divider"></footer>
 
-  <!-- Fixed script paths -->
-  <script type="module" src="/src/js/checkout.js"></script>
-  <script type="module" src="/src/js/main.js"></script>
+  <!--  Correct script paths -->
+  <script type="module" src="/js/checkout.js"></script>
+  <script type="module" src="/js/main.js"></script>
 </body>
 
 </html>
