Completed W04 Team Activity: Checkout

--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -18,16 +18,15 @@
       <!-- Cart items will be rendered here by cart.mjs -->
     </div>
 
-    <!-- <div class="cart-summary">
-      <strong>Total: $<span class="cart-total">0.00</span></strong>
-    </div> -->
-
     <div class="cart-summary">
       <span class="cart-summary-label">Total:</span>
       <span class="cart-summary-price">$<span class="cart-total">0.00</span></span>
-        <div></div> <!-- column 4 empty (keep grid columns consistent) -->
     </div>
 
+    <!-- Proceed to Checkout Button -->
+    <div class="checkout-action">
+      <a href="/checkout/index.html" class="btn-primary">Proceed to Checkout</a>
+    </div>
   </main>
 
   <footer id="main-footer" class="divider"></footer>
